feat: add ledger-fineract-client-sdk and update lending-activity-api